# embedded-jar-launcher

./: .gitignore  Cargo.toml  README.md  build-cross-chain.sh  build.gradle.kts  build1.gradle.kts  cargo-config.toml  rust-builder.dockerfile  rustfmt.toml  settings.gradle.kts
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/com/anatawa12/gradleRust/: CargoBuildTask.kt  CargoExtension.kt  CargoProject.kt  CargoToolChain.kt  EnvironmentProperties.kt  GradlePlugin.kt
native/: Cargo.toml
native/lib/: Cargo.toml
native/lib/src/: env.rs  jni.rs  launchers.rs  lib.rs  searcher.rs  util.rs
native/src/: main.rs  tempfile.rs
sdk-generator/: Cargo.toml
sdk-generator/src/: dylib_name.rs  mach_common.rs  mach_o_parse.rs  main.rs  symlinks.rs  text_api.rs  util.rs
sdk-generator/src/writer/: dir.rs  internal.rs  mod.rs  tar.rs  tgz.rs  zip.rs
src/main/java/com/anatawa12/protobuf/compiler/: PluginMain.java
src/main/lib/: NativeWrapperRunner.java
