[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
launcher-lib = { path = "./lib" }
cfg-if = "1"

[features]
unix-use-exec = []
unix-use-spawn = []
unix-use-dylib = []

windows-use-spawn = []
windows-use-dylib = []


default = ["unix-use-exec", "windows-use-spawn"]
