[package]
name = "sdk-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
anyhow = "1"
log = "0.4"
simple_logger = "2"
multimap = { version = "0.8", default-features = false }
clap = { version = "3", features = ["derive"] }
tar = "0.4"
flate2 = "1"
relative-path = "1"

[dependencies.zip]
version = "0.5"
default-features = false
features = [
    "deflate",
    "time",
]

[dependencies.object]
version = "0.28"
default-features = false
features = [
    "read_core",
    "macho",
    "compression",
]
